# UranIncremental

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_timezone_aware_timestamps.py  c3d4e5f6a7b8_add_balance_proposal_table.py  d4e5f6a7b8c9_add_click_stats_to_player_state.py  e5f6a7b8c9d0_add_experiment_tables.py  fc60fc089de5_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: balance.py  economy.py  experiment.py  game.py  health.py  test_admin.py  time.py
backend/app/core/: config.py  time_utils.py
backend/app/db/: seed.py  session.py
backend/app/db/models/: __init__.py  balance.py  events.py  experiment.py  player_state.py  unit.py  upgrade.py  wallet.py
backend/app/db/repositories/: balance_proposal.py  event_log.py  experiment_definition.py  player_state.py  player_unit.py  player_upgrade.py  unit_definition.py  upgrade_definition.py  wallet.py
backend/app/schemas/: balance.py  economy.py  game.py  test_admin.py
backend/app/services/: balance_ai_service.py  click_service.py  economy_service.py  experiment_service.py  game_loop_service.py  prestige_service.py  pricing_service.py  snapshot_sign_service.py
backend/app/tests/: conftest.py
backend/app/tests/api/: test_health.py
backend/app/tests/balance/: test_click_balance.py  test_economy.py  test_experiment_balance.py  test_prestige.py  test_pricing.py  test_tier_progression.py
backend/app/tests/unit/: conftest.py  (+11 more)
(+25 files in other folders)
